@@ -8,11 +8,20 @@ package org.opensearch.ml.engine.algorithms.agent;
 import static org.opensearch.ml.common.conversation.ActionConstants.ADDITIONAL_INFO_FIELD;
 import static org.opensearch.ml.common.conversation.ActionConstants.AI_RESPONSE_FIELD;
 import static org.opensearch.ml.common.utils.StringUtils.gson;
+import static org.opensearch.ml.common.utils.StringUtils.isJson;
+import static org.opensearch.ml.engine.algorithms.agent.AgentUtils.PROMPT_PREFIX;
+import static org.opensearch.ml.engine.algorithms.agent.AgentUtils.PROMPT_SUFFIX;
+import static org.opensearch.ml.engine.algorithms.agent.AgentUtils.RESPONSE_FORMAT_INSTRUCTION;
+import static org.opensearch.ml.engine.algorithms.agent.AgentUtils.TOOL_RESPONSE;
+import static org.opensearch.ml.engine.algorithms.agent.AgentUtils.createTools;
 import static org.opensearch.ml.engine.algorithms.agent.AgentUtils.extractModelResponseJson;
 import static org.opensearch.ml.engine.algorithms.agent.AgentUtils.getMessageHistoryLimit;
+import static org.opensearch.ml.engine.algorithms.agent.AgentUtils.getMlToolSpecs;
 import static org.opensearch.ml.engine.algorithms.agent.AgentUtils.outputToOutputString;
 import static org.opensearch.ml.engine.algorithms.agent.AgentUtils.parseInputFromLLMReturn;
 
+import java.security.AccessController;
+import java.security.PrivilegedExceptionAction;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -25,14 +34,10 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 
 import org.apache.commons.text.StringSubstitutor;
 import org.opensearch.action.ActionRequest;
 import org.opensearch.action.StepListener;
-import org.opensearch.action.support.GroupedActionListener;
-import org.opensearch.action.update.UpdateResponse;
 import org.opensearch.client.Client;
 import org.opensearch.cluster.service.ClusterService;
 import org.opensearch.common.settings.Settings;
@@ -59,7 +64,6 @@ import org.opensearch.ml.common.transport.prediction.MLPredictionTaskRequest;
 import org.opensearch.ml.engine.memory.ConversationIndexMemory;
 import org.opensearch.ml.engine.memory.ConversationIndexMessage;
 import org.opensearch.ml.engine.tools.MLModelTool;
-import org.opensearch.ml.memory.action.conversation.CreateInteractionResponse;
 import org.opensearch.ml.repackage.com.google.common.collect.ImmutableMap;
 import org.opensearch.ml.repackage.com.google.common.collect.Lists;
 
@@ -73,10 +77,8 @@ import lombok.extern.log4j.Log4j2;
 public class MLChatAgentRunner implements MLAgentRunner {
 
     public static final String SESSION_ID = "session_id";
-    public static final String PROMPT_PREFIX = "prompt_prefix";
     public static final String LLM_TOOL_PROMPT_PREFIX = "LanguageModelTool.prompt_prefix";
     public static final String LLM_TOOL_PROMPT_SUFFIX = "LanguageModelTool.prompt_suffix";
-    public static final String PROMPT_SUFFIX = "prompt_suffix";
     public static final String TOOLS = "tools";
     public static final String TOOL_DESCRIPTIONS = "tool_descriptions";
     public static final String TOOL_NAMES = "tool_names";
@@ -121,6 +123,7 @@ public class MLChatAgentRunner implements MLAgentRunner {
 
         ConversationIndexMemory.Factory conversationIndexMemoryFactory = (ConversationIndexMemory.Factory) memoryFactoryMap.get(memoryType);
         conversationIndexMemoryFactory.create(title, memoryId, appType, ActionListener.<ConversationIndexMemory>wrap(memory -> {
+            //TODO: call runAgent directly if messageHistoryLimit == 0
             memory.getMessages(ActionListener.<List<Interaction>>wrap(r -> {
                 List<Message> messageList = new ArrayList<>();
                 for (Interaction next : r) {
@@ -131,20 +134,12 @@ public class MLChatAgentRunner implements MLAgentRunner {
                     if (Strings.isNullOrEmpty(response)) {
                         continue;
                     }
-                    messageList
-                        .add(
-                            ConversationIndexMessage
-                                .conversationIndexMessageBuilder()
-                                .sessionId(memory.getConversationId())
-                                .question(question)
-                                .response(response)
-                                .build()
-                        );
+                    messageList.add(ConversationIndexMessage.conversationIndexMessageBuilder().sessionId(memory.getConversationId()).question(question).response(response).build());
                 }
 
                 StringBuilder chatHistoryBuilder = new StringBuilder();
                 if (messageList.size() > 0) {
-                    chatHistoryBuilder.append("Below is Chat History between Human and AI which sorted by time with asc order:\n");
+                    chatHistoryBuilder.append("Human:CONVERSATION HISTORY WITH AI ASSISTANT\n----------------------------\nBelow is Chat History between Human and AI which sorted by time with asc order:\n");
                     for (Message message : messageList) {
                         chatHistoryBuilder.append(message.toString()).append("\n");
                     }
@@ -160,34 +155,10 @@ public class MLChatAgentRunner implements MLAgentRunner {
     }
 
     private void runAgent(MLAgent mlAgent, Map<String, String> params, ActionListener<Object> listener, Memory memory, String sessionId) {
-        List<MLToolSpec> toolSpecs = mlAgent.getTools();
+        List<MLToolSpec> toolSpecs = getMlToolSpecs(mlAgent, params);
         Map<String, Tool> tools = new HashMap<>();
         Map<String, MLToolSpec> toolSpecMap = new HashMap<>();
-        for (MLToolSpec toolSpec : toolSpecs) {
-            Map<String, String> toolParams = new HashMap<>();
-            Map<String, String> executeParams = new HashMap<>();
-            if (toolSpec.getParameters() != null) {
-                toolParams.putAll(toolSpec.getParameters());
-                executeParams.putAll(toolSpec.getParameters());
-            }
-            for (String key : params.keySet()) {
-                if (key.startsWith(toolSpec.getType() + ".")) {
-                    executeParams.put(key.replace(toolSpec.getType() + ".", ""), params.get(key));
-                }
-            }
-            log.info("Fetching tool for type: " + toolSpec.getType());
-            Tool tool = toolFactories.get(toolSpec.getType()).create(executeParams);
-            if (toolSpec.getName() != null) {
-                tool.setName(toolSpec.getName());
-            }
-
-            if (toolSpec.getDescription() != null) {
-                tool.setDescription(toolSpec.getDescription());
-            }
-            String toolName = Optional.ofNullable(tool.getName()).orElse(toolSpec.getType());
-            tools.put(toolName, tool);
-            toolSpecMap.put(toolName, toolSpec);
-        }
+        createTools(toolFactories, params, toolSpecs, tools, toolSpecMap);
 
         runReAct(mlAgent.getLlm(), tools, toolSpecMap, params, memory, sessionId, listener);
     }
@@ -204,6 +175,7 @@ public class MLChatAgentRunner implements MLAgentRunner {
         String question = parameters.get(MLAgentExecutor.QUESTION);
         String parentInteractionId = parameters.get(MLAgentExecutor.PARENT_INTERACTION_ID);
         boolean verbose = parameters.containsKey("verbose") && Boolean.parseBoolean(parameters.get("verbose"));
+        boolean traceDisabled = parameters.containsKey("disable_trace") && Boolean.parseBoolean(parameters.get("disable_trace"));
         Map<String, String> tmpParameters = new HashMap<>();
         if (llm.getParameters() != null) {
             tmpParameters.putAll(llm.getParameters());
@@ -213,46 +185,28 @@ public class MLChatAgentRunner implements MLAgentRunner {
             tmpParameters.put("stop", gson.toJson(new String[] { "\nObservation:", "\n\tObservation:" }));
         }
         if (!tmpParameters.containsKey("stop_sequences")) {
-            tmpParameters
-                .put(
-                    "stop_sequences",
-                    gson
-                        .toJson(
-                            new String[] {
-                                "\n\nHuman:",
-                                "\nObservation:",
-                                "\n\tObservation:",
-                                "\nObservation",
-                                "\n\tObservation",
-                                "\n\nQuestion" }
-                        )
-                );
+            tmpParameters.put("stop_sequences", gson.toJson(new String[] {"\n\nHuman:", "\nObservation:", "\n\tObservation:", "\nObservation", "\n\tObservation", "\n\nQuestion" }));
         }
 
-        String prompt = parameters.get(PROMPT);
-        if (prompt == null) {
-            prompt = PromptTemplate.PROMPT_TEMPLATE;
-        }
-        String promptPrefix = parameters.getOrDefault("prompt.prefix", PromptTemplate.PROMPT_TEMPLATE_PREFIX);
-        tmpParameters.put("prompt.prefix", promptPrefix);
+        String prompt = parameters.getOrDefault(PROMPT, PromptTemplate.PROMPT_TEMPLATE);
+        String promptPrefix = parameters.getOrDefault(PROMPT_PREFIX, PromptTemplate.PROMPT_TEMPLATE_PREFIX);
+        tmpParameters.put(PROMPT_PREFIX, promptPrefix);
 
-        String promptSuffix = parameters.getOrDefault("prompt.suffix", PromptTemplate.PROMPT_TEMPLATE_SUFFIX);
-        tmpParameters.put("prompt.suffix", promptSuffix);
+        String promptSuffix = parameters.getOrDefault(PROMPT_SUFFIX, PromptTemplate.PROMPT_TEMPLATE_SUFFIX);
+        tmpParameters.put(PROMPT_SUFFIX, promptSuffix);
 
-        String promptFormatInstruction = parameters.getOrDefault("prompt.format_instruction", PromptTemplate.PROMPT_FORMAT_INSTRUCTION);
-        tmpParameters.put("prompt.format_instruction", promptFormatInstruction);
-        if (!tmpParameters.containsKey("prompt.tool_response")) {
-            tmpParameters.put("prompt.tool_response", PromptTemplate.PROMPT_TEMPLATE_TOOL_RESPONSE);
-        }
-        String promptToolResponse = parameters.getOrDefault("prompt.tool_response", PromptTemplate.PROMPT_TEMPLATE_TOOL_RESPONSE);
-        tmpParameters.put("prompt.tool_response", promptToolResponse);
+        String promptFormatInstruction = parameters.getOrDefault(RESPONSE_FORMAT_INSTRUCTION, PromptTemplate.PROMPT_FORMAT_INSTRUCTION);
+        tmpParameters.put(RESPONSE_FORMAT_INSTRUCTION, promptFormatInstruction);
+
+        String promptToolResponse = parameters.getOrDefault(TOOL_RESPONSE, PromptTemplate.PROMPT_TEMPLATE_TOOL_RESPONSE);
+        tmpParameters.put(TOOL_RESPONSE, promptToolResponse);
 
         StringSubstitutor promptSubstitutor = new StringSubstitutor(tmpParameters, "${parameters.", "}");
         prompt = promptSubstitutor.replace(prompt);
 
         final List<String> inputTools = new ArrayList<>();
         for (Map.Entry<String, Tool> entry : tools.entrySet()) {
-            String toolName = Optional.ofNullable(entry.getValue().getName()).orElse(entry.getValue().getType());
+            String toolName = entry.getValue().getName();
             inputTools.add(toolName);
         }
 
@@ -268,26 +222,10 @@ public class MLChatAgentRunner implements MLAgentRunner {
         List<ModelTensors> modelTensors = new ArrayList<>();
 
         List<ModelTensors> cotModelTensors = new ArrayList<>();
-        cotModelTensors
-            .add(
-                ModelTensors
-                    .builder()
-                    .mlModelTensors(
-                        List
-                            .of(
-                                ModelTensor.builder().name(MLAgentExecutor.MEMORY_ID).result(sessionId).build(),
-                                ModelTensor.builder().name(MLAgentExecutor.PARENT_INTERACTION_ID).result(parentInteractionId).build()
-                            )
-                    )
-                    .build()
-            );
+        cotModelTensors.add(ModelTensors.builder().mlModelTensors(List.of(ModelTensor.builder().name(MLAgentExecutor.MEMORY_ID).result(sessionId).build(), ModelTensor.builder().name(MLAgentExecutor.PARENT_INTERACTION_ID).result(parentInteractionId).build())).build());
 
         StringBuilder scratchpadBuilder = new StringBuilder();
-        StringSubstitutor tmpSubstitutor = new StringSubstitutor(
-            ImmutableMap.of(SCRATCHPAD, scratchpadBuilder.toString()),
-            "${parameters.",
-            "}"
-        );
+        StringSubstitutor tmpSubstitutor = new StringSubstitutor(ImmutableMap.of(SCRATCHPAD, scratchpadBuilder.toString()), "${parameters.", "}");
         AtomicReference<String> newPrompt = new AtomicReference<>(tmpSubstitutor.replace(prompt));
         tmpParameters.put(PROMPT, newPrompt.get());
 
@@ -305,6 +243,7 @@ public class MLChatAgentRunner implements MLAgentRunner {
         AtomicReference<String> lastThought = new AtomicReference<>();
         AtomicReference<String> lastAction = new AtomicReference<>();
         AtomicReference<String> lastActionInput = new AtomicReference<>();
+        AtomicReference<String> lastToolSelectionResponse = new AtomicReference<>();
         Map<String, Object> additionalInfo = new ConcurrentHashMap<>();
 
         StepListener<?> lastStepListener = null;
@@ -325,151 +264,73 @@ public class MLChatAgentRunner implements MLAgentRunner {
                     MLTaskResponse llmResponse = (MLTaskResponse) output;
                     ModelTensorOutput tmpModelTensorOutput = (ModelTensorOutput) llmResponse.getOutput();
                     Map<String, ?> dataAsMap = tmpModelTensorOutput.getMlModelOutputs().get(0).getMlModelTensors().get(0).getDataAsMap();
+                    String thoughtResponse = null;
+                    String finalAnswer = null;
                     if (dataAsMap.size() == 1 && dataAsMap.containsKey("response")) {
-                        String response = (String) dataAsMap.get("response");
-                        String thoughtResponse = extractModelResponseJson(response);
-                        dataAsMap = gson.fromJson(thoughtResponse, Map.class);
+                        String llmReasoningResponse = (String) dataAsMap.get("response");
+                        try {
+                            thoughtResponse = extractModelResponseJson(llmReasoningResponse);
+                        } catch (IllegalArgumentException e) {
+                            thoughtResponse = llmReasoningResponse;
+                            finalAnswer = llmReasoningResponse;
+                        }
+                        if (isJson(thoughtResponse)) {
+                            dataAsMap = gson.fromJson(thoughtResponse, Map.class);
+                        }
+                    } else {
+                        try {
+                            Map<String, ?> finalDataAsMap = dataAsMap;
+                            thoughtResponse = AccessController.doPrivileged((PrivilegedExceptionAction<String>) () -> gson.toJson(finalDataAsMap));
+                        } catch (Exception e) {
+                            e.printStackTrace();
+                        }
                     }
                     String thought = String.valueOf(dataAsMap.get("thought"));
                     String action = String.valueOf(dataAsMap.get("action"));
                     String actionInput = parseInputFromLLMReturn(dataAsMap);
-                    String finalAnswer = (String) dataAsMap.get("final_answer");
-                    if (!dataAsMap.containsKey("thought")) {
-                        String response = (String) dataAsMap.get("response");
-                        Pattern pattern = Pattern.compile("```json(.*?)```", Pattern.DOTALL);
-                        Matcher matcher = pattern.matcher(response);
-                        if (matcher.find()) {
-                            String jsonBlock = matcher.group(1);
-                            Map map = gson.fromJson(jsonBlock, Map.class);
-                            thought = String.valueOf(map.get("thought"));
-                            action = String.valueOf(map.get("action"));
-                            actionInput = parseInputFromLLMReturn(map);
-                            finalAnswer = (String) map.get("final_answer");
-                        } else {
-                            finalAnswer = response;
-                        }
+                    if (dataAsMap.containsKey("final_answer")) {
+                        finalAnswer = String.valueOf(dataAsMap.get("final_answer"));
                     }
+
+                    if (finalAnswer != null) {
+                        finalAnswer = finalAnswer.trim();
+                        if (conversationIndexMemory != null) {
+                            String copyOfFinalAnswer = finalAnswer;
+                            ActionListener saveTraceListener = ActionListener.wrap(r->{
+                                conversationIndexMemory.getMemoryManager().updateInteraction(parentInteractionId,
+                                        Map.of(AI_RESPONSE_FIELD, copyOfFinalAnswer, ADDITIONAL_INFO_FIELD, additionalInfo),
+                                        ActionListener.wrap(res ->{
+                                            returnFinalResponse(sessionId, listener, parentInteractionId, verbose, cotModelTensors, getFinalAnswer, additionalInfo, copyOfFinalAnswer);
+                                        }, e-> {
+                                            listener.onFailure(e);
+                                        }));
+                            }, e-> {
+                                listener.onFailure(e);
+                            });
+                            saveMessage(conversationIndexMemory, question, finalAnswer, sessionId, parentInteractionId, traceNumber, true, traceDisabled, saveTraceListener);
+                        } else {
+                            returnFinalResponse(sessionId, listener, parentInteractionId, verbose, cotModelTensors, getFinalAnswer, additionalInfo, finalAnswer);
+                        }
+                        return;
+                    }
+
+                    lastToolSelectionResponse.set(thoughtResponse);
 
                     if (finalI == 0 && !thought.contains("Thought:")) {
                         sessionMsgAnswerBuilder.append("Thought: ");
                     }
                     sessionMsgAnswerBuilder.append(thought);
                     lastThought.set(thought);
-                    cotModelTensors
-                        .add(
-                            ModelTensors
-                                .builder()
-                                .mlModelTensors(
-                                    Collections
-                                        .singletonList(
-                                            ModelTensor.builder().name("response").result(sessionMsgAnswerBuilder.toString()).build()
-                                        )
-                                )
-                                .build()
-                        );
+
+                    cotModelTensors.add(ModelTensors.builder().mlModelTensors(List.of(ModelTensor.builder().name("response").result(thoughtResponse).build())).build());
                     // TODO: check if verbose
                     modelTensors.addAll(tmpModelTensorOutput.getMlModelOutputs());
 
                     if (conversationIndexMemory != null) {
-                        ConversationIndexMessage msgTemp = ConversationIndexMessage
-                            .conversationIndexMessageBuilder()
-                            .type(memory.getType())
-                            .question(question)
-                            .response(thought)
-                            .finalAnswer(false)
-                            .sessionId(sessionId)
-                            .build();
-                        conversationIndexMemory.save(msgTemp, parentInteractionId, traceNumber.addAndGet(1), null);
-                    }
-                    if (finalAnswer != null) {
-                        finalAnswer = finalAnswer.trim();
-                        String finalAnswer2 = finalAnswer;
-                        // Composite execution response and reply.
-                        final ActionListener<Boolean> executionListener = ActionListener.notifyOnce(ActionListener.wrap(r -> {
-                            cotModelTensors
-                                .add(
-                                    ModelTensors
-                                        .builder()
-                                        .mlModelTensors(
-                                            Collections.singletonList(ModelTensor.builder().name("response").result(finalAnswer2).build())
-                                        )
-                                        .build()
-                                );
-
-                            List<ModelTensors> finalModelTensors = new ArrayList<>();
-                            finalModelTensors
-                                .add(
-                                    ModelTensors
-                                        .builder()
-                                        .mlModelTensors(
-                                            List
-                                                .of(
-                                                    ModelTensor.builder().name(MLAgentExecutor.MEMORY_ID).result(sessionId).build(),
-                                                    ModelTensor
-                                                        .builder()
-                                                        .name(MLAgentExecutor.PARENT_INTERACTION_ID)
-                                                        .result(parentInteractionId)
-                                                        .build()
-                                                )
-                                        )
-                                        .build()
-                                );
-                            finalModelTensors
-                                .add(
-                                    ModelTensors
-                                        .builder()
-                                        .mlModelTensors(
-                                            Collections
-                                                .singletonList(
-                                                    ModelTensor
-                                                        .builder()
-                                                        .name("response")
-                                                        .dataAsMap(
-                                                            ImmutableMap.of("response", finalAnswer2, ADDITIONAL_INFO_FIELD, additionalInfo)
-                                                        )
-                                                        .build()
-                                                )
-                                        )
-                                        .build()
-                                );
-                            getFinalAnswer.set(true);
-                            if (verbose) {
-                                listener.onResponse(ModelTensorOutput.builder().mlModelOutputs(cotModelTensors).build());
-                            } else {
-                                listener.onResponse(ModelTensorOutput.builder().mlModelOutputs(finalModelTensors).build());
-                            }
-                        }, listener::onFailure));
-                        // Sending execution response by internalListener is after the trace and answer saving.
-                        final GroupedActionListener<ActionResponse> groupedListener = createGroupedListener(2, executionListener);
-                        if (conversationIndexMemory != null) {
-                            String finalAnswer1 = finalAnswer;
-                            // Create final trace message.
-                            ConversationIndexMessage msgTemp = ConversationIndexMessage
-                                .conversationIndexMessageBuilder()
-                                .type(memory.getType())
-                                .question(question)
-                                .response(finalAnswer1)
-                                .finalAnswer(true)
-                                .sessionId(sessionId)
-                                .build();
-                            // Save last trace and update final answer in parallel.
-                            conversationIndexMemory
-                                .save(
-                                    msgTemp,
-                                    parentInteractionId,
-                                    traceNumber.addAndGet(1),
-                                    null,
-                                    ActionListener.<CreateInteractionResponse>wrap(groupedListener::onResponse, groupedListener::onFailure)
-                                );
-                            conversationIndexMemory
-                                .getMemoryManager()
-                                .updateInteraction(
-                                    parentInteractionId,
-                                    ImmutableMap.of(AI_RESPONSE_FIELD, finalAnswer1, ADDITIONAL_INFO_FIELD, additionalInfo),
-                                    ActionListener.<UpdateResponse>wrap(groupedListener::onResponse, groupedListener::onFailure)
-                                );
+                        ConversationIndexMessage msgTemp = ConversationIndexMessage.conversationIndexMessageBuilder().type(memory.getType()).question(question).response(thoughtResponse).finalAnswer(false).sessionId(sessionId).build();
+                        if (!traceDisabled) {
+                            conversationIndexMemory.save(msgTemp, parentInteractionId, traceNumber.addAndGet(1), "LLM");
                         }
-                        return;
                     }
 
                     lastAction.set(action);
@@ -499,17 +360,10 @@ public class MLChatAgentRunner implements MLAgentRunner {
                             try {
                                 String finalAction = action;
                                 ActionListener<Object> toolListener = ActionListener
-                                    .wrap(r -> { ((ActionListener<Object>) nextStepListener).onResponse(r); }, e -> {
-                                        ((ActionListener<Object>) nextStepListener)
-                                            .onResponse(
-                                                String
-                                                    .format(
-                                                        Locale.ROOT,
-                                                        "Failed to run the tool %s with the error message %s.",
-                                                        finalAction,
-                                                        e.getMessage()
-                                                    )
-                                            );
+                                    .wrap(r -> {
+                                        ((ActionListener<Object>) nextStepListener).onResponse(r);
+                                        }, e -> {
+                                        ((ActionListener<Object>) nextStepListener).onResponse(String.format(Locale.ROOT, "Failed to run the tool %s with the error message %s.", finalAction, e.getMessage()));
                                     });
                                 if (tools.get(action) instanceof MLModelTool) {
                                     Map<String, String> llmToolTmpParameters = new HashMap<>();
@@ -522,30 +376,16 @@ public class MLChatAgentRunner implements MLAgentRunner {
                                     tools.get(action).run(toolParams, toolListener); // run tool
                                 }
                             } catch (Exception e) {
-                                ((ActionListener<Object>) nextStepListener)
-                                    .onResponse(
-                                        String
-                                            .format(
-                                                Locale.ROOT,
-                                                "Failed to run the tool %s with the error message %s.",
-                                                action,
-                                                e.getMessage()
-                                            )
-                                    );
+                                ((ActionListener<Object>) nextStepListener).onResponse(String.format(Locale.ROOT, "Failed to run the tool %s with the error message %s.", action, e.getMessage()));
                             }
                         } else {
-                            String res = String
-                                .format(Locale.ROOT, "Failed to run the tool %s due to wrong input %s.", action, actionInput);
+                            String res = String.format(Locale.ROOT, "Failed to run the tool %s due to wrong input %s.", action, actionInput);
                             ((ActionListener<Object>) nextStepListener).onResponse(res);
                         }
                     } else {
                         String res = String.format(Locale.ROOT, "Failed to run the tool %s which is unsupported.", action);
                         ((ActionListener<Object>) nextStepListener).onResponse(res);
-                        StringSubstitutor substitutor = new StringSubstitutor(
-                            ImmutableMap.of(SCRATCHPAD, scratchpadBuilder.toString()),
-                            "${parameters.",
-                            "}"
-                        );
+                        StringSubstitutor substitutor = new StringSubstitutor(ImmutableMap.of(SCRATCHPAD, scratchpadBuilder.toString()), "${parameters.", "}");
                         newPrompt.set(substitutor.replace(finalPrompt));
                         tmpParameters.put(PROMPT, newPrompt.get());
                     }
@@ -553,7 +393,6 @@ public class MLChatAgentRunner implements MLAgentRunner {
                     MLToolSpec toolSpec = toolSpecMap.get(lastAction.get());
                     if (toolSpec != null && toolSpec.isIncludeOutputInAgentResponse()) {
                         String outputString = outputToOutputString(output);
-
                         String toolOutputKey = String.format("%s.output", toolSpec.getType());
                         if (additionalInfo.get(toolOutputKey) != null) {
                             List<String> list = (List<String>) additionalInfo.get(toolOutputKey);
@@ -561,123 +400,39 @@ public class MLChatAgentRunner implements MLAgentRunner {
                         } else {
                             additionalInfo.put(toolOutputKey, Lists.newArrayList(outputString));
                         }
-
                     }
-                    modelTensors
-                        .add(
-                            ModelTensors
-                                .builder()
-                                .mlModelTensors(
-                                    Collections
-                                        .singletonList(
-                                            ModelTensor
-                                                .builder()
-                                                .dataAsMap(
-                                                    ImmutableMap
-                                                        .of(
-                                                            "response",
-                                                            lastThought.get() + "\nObservation: " + outputToOutputString(output)
-                                                        )
-                                                )
-                                                .build()
-                                        )
-                                )
-                                .build()
-                        );
+                    modelTensors.add(ModelTensors.builder().mlModelTensors(Collections.singletonList(ModelTensor.builder().dataAsMap(ImmutableMap.of("response", lastThought.get() + "\nObservation: " + outputToOutputString(output))).build())).build());
 
-                    String toolResponse = tmpParameters.get("prompt.tool_response");
-                    StringSubstitutor toolResponseSubstitutor = new StringSubstitutor(
-                        ImmutableMap.of("observation", outputToOutputString(output)),
-                        "${parameters.",
-                        "}"
-                    );
+                    String toolResponse = tmpParameters.get(TOOL_RESPONSE);
+                    StringSubstitutor toolResponseSubstitutor = new StringSubstitutor(Map.of("llm_tool_selection_response", /*"```json\\n" +*/ lastToolSelectionResponse.get() /*+ "\n```"*/, "tool_name", lastAction.get(),"tool_input", lastActionInput.get(),"observation", outputToOutputString(output)), "${parameters.", "}");
                     toolResponse = toolResponseSubstitutor.replace(toolResponse);
                     scratchpadBuilder.append(toolResponse).append("\n\n");
                     if (conversationIndexMemory != null) {
                         // String res = "Action: " + lastAction.get() + "\nAction Input: " + lastActionInput + "\nObservation: " + result;
-                        ConversationIndexMessage msgTemp = ConversationIndexMessage
-                            .conversationIndexMessageBuilder()
-                            .type("ReAct")
-                            .question(lastActionInput.get())
-                            .response(outputToOutputString(output))
-                            .finalAnswer(false)
-                            .sessionId(sessionId)
-                            .build();
-                        conversationIndexMemory.save(msgTemp, parentInteractionId, traceNumber.addAndGet(1), lastAction.get());
-
+                        ConversationIndexMessage msgTemp = ConversationIndexMessage.conversationIndexMessageBuilder().type("ReAct").question(lastActionInput.get()).response(outputToOutputString(output)).finalAnswer(false).sessionId(sessionId).build();
+                        if (!traceDisabled) {
+                            conversationIndexMemory.save(msgTemp, parentInteractionId, traceNumber.addAndGet(1), lastAction.get());
+                        }
                     }
-                    StringSubstitutor substitutor = new StringSubstitutor(
-                        ImmutableMap.of(SCRATCHPAD, scratchpadBuilder.toString()),
-                        "${parameters.",
-                        "}"
-                    );
+                    StringSubstitutor substitutor = new StringSubstitutor(Map.of(SCRATCHPAD, scratchpadBuilder /*+ PROMPT_TEMPLATE_ASK_AGAIN*/), "${parameters.", "}");
                     newPrompt.set(substitutor.replace(finalPrompt));
                     tmpParameters.put(PROMPT, newPrompt.get());
 
-                    sessionMsgAnswerBuilder.append("\nObservation: ").append(outputToOutputString(output));
-                    cotModelTensors
-                        .add(
-                            ModelTensors
-                                .builder()
-                                .mlModelTensors(
-                                    Collections
-                                        .singletonList(
-                                            ModelTensor.builder().name("response").result(sessionMsgAnswerBuilder.toString()).build()
-                                        )
-                                )
-                                .build()
-                        );
+                    sessionMsgAnswerBuilder.append(outputToOutputString(output));
+                    cotModelTensors.add(ModelTensors.builder().mlModelTensors(Collections.singletonList(ModelTensor.builder().name("response").result(sessionMsgAnswerBuilder.toString()).build())).build());
 
-                    ActionRequest request = new MLPredictionTaskRequest(
-                        llm.getModelId(),
-                        RemoteInferenceMLInput
-                            .builder()
-                            .algorithm(FunctionName.REMOTE)
-                            .inputDataset(RemoteInferenceInputDataSet.builder().parameters(tmpParameters).build())
-                            .build()
-                    );
-                    client.execute(MLPredictionTaskAction.INSTANCE, request, (ActionListener<MLTaskResponse>) nextStepListener);
+                    //client.execute(MLPredictionTaskAction.INSTANCE, request, (ActionListener<MLTaskResponse>) nextStepListener);
                     if (finalI == maxIterations - 1) {
                         if (verbose) {
                             listener.onResponse(ModelTensorOutput.builder().mlModelOutputs(cotModelTensors).build());
                         } else {
                             List<ModelTensors> finalModelTensors = new ArrayList<>();
-                            finalModelTensors
-                                .add(
-                                    ModelTensors
-                                        .builder()
-                                        .mlModelTensors(
-                                            List
-                                                .of(
-                                                    ModelTensor.builder().name(MLAgentExecutor.MEMORY_ID).result(sessionId).build(),
-                                                    ModelTensor
-                                                        .builder()
-                                                        .name(MLAgentExecutor.PARENT_INTERACTION_ID)
-                                                        .result(parentInteractionId)
-                                                        .build()
-                                                )
-                                        )
-                                        .build()
-                                );
-                            finalModelTensors
-                                .add(
-                                    ModelTensors
-                                        .builder()
-                                        .mlModelTensors(
-                                            Collections
-                                                .singletonList(
-                                                    ModelTensor
-                                                        .builder()
-                                                        .name("response")
-                                                        .dataAsMap(ImmutableMap.of("response", lastThought.get()))
-                                                        .build()
-                                                )
-                                        )
-                                        .build()
-                                );
+                            finalModelTensors.add(ModelTensors.builder().mlModelTensors(List.of(ModelTensor.builder().name(MLAgentExecutor.MEMORY_ID).result(sessionId).build(), ModelTensor.builder().name(MLAgentExecutor.PARENT_INTERACTION_ID).result(parentInteractionId).build())).build());
+                            finalModelTensors.add(ModelTensors.builder().mlModelTensors(Collections.singletonList(ModelTensor.builder().name("response").dataAsMap(ImmutableMap.of("response", lastThought.get())).build())).build());
                             listener.onResponse(ModelTensorOutput.builder().mlModelOutputs(finalModelTensors).build());
                         }
                     } else {
+                        ActionRequest request = new MLPredictionTaskRequest(llm.getModelId(), RemoteInferenceMLInput.builder().algorithm(FunctionName.REMOTE).inputDataset(RemoteInferenceInputDataSet.builder().parameters(tmpParameters).build()).build());
                         client.execute(MLPredictionTaskAction.INSTANCE, request, (ActionListener<MLTaskResponse>) nextStepListener);
                     }
                 }
@@ -690,34 +445,41 @@ public class MLChatAgentRunner implements MLAgentRunner {
             }
         }
 
-        ActionRequest request = new MLPredictionTaskRequest(
-            llm.getModelId(),
-            RemoteInferenceMLInput
-                .builder()
-                .algorithm(FunctionName.REMOTE)
-                .inputDataset(RemoteInferenceInputDataSet.builder().parameters(tmpParameters).build())
-                .build()
-        );
+        ActionRequest request = new MLPredictionTaskRequest(llm.getModelId(), RemoteInferenceMLInput.builder().algorithm(FunctionName.REMOTE).inputDataset(RemoteInferenceInputDataSet.builder().parameters(tmpParameters).build()).build());
         client.execute(MLPredictionTaskAction.INSTANCE, request, firstListener);
     }
 
-    private GroupedActionListener<ActionResponse> createGroupedListener(final int size, final ActionListener<Boolean> listener) {
-        return new GroupedActionListener<>(new ActionListener<Collection<ActionResponse>>() {
-            @Override
-            public void onResponse(final Collection<ActionResponse> responses) {
-                CreateInteractionResponse createInteractionResponse = extractResponse(responses, CreateInteractionResponse.class);
-                log.info("saved message with interaction id: {}", createInteractionResponse.getId());
-                UpdateResponse updateResponse = extractResponse(responses, UpdateResponse.class);
-                log.info("Updated final answer into interaction id: {}", updateResponse.getId());
+    private static void returnFinalResponse(String sessionId, ActionListener<Object> listener, String parentInteractionId, boolean verbose, List<ModelTensors> cotModelTensors, AtomicBoolean getFinalAnswer, Map<String, Object> additionalInfo, String finalAnswer2) {
+        cotModelTensors.add(ModelTensors.builder().mlModelTensors(List.of(ModelTensor.builder().name("response").result(finalAnswer2).build())).build());
 
-                listener.onResponse(true);
-            }
+        List<ModelTensors> finalModelTensors = new ArrayList<>();
+        finalModelTensors.add(ModelTensors.builder().mlModelTensors(List.of(ModelTensor.builder().name(MLAgentExecutor.MEMORY_ID).result(sessionId).build(), ModelTensor.builder().name(MLAgentExecutor.PARENT_INTERACTION_ID).result(parentInteractionId).build())).build());
+        finalModelTensors.add(ModelTensors.builder().mlModelTensors(List.of(ModelTensor.builder().name("response").dataAsMap(ImmutableMap.of("response", finalAnswer2, ADDITIONAL_INFO_FIELD, additionalInfo)).build())).build());
+        getFinalAnswer.set(true);
+        if (verbose) {
+            listener.onResponse(ModelTensorOutput.builder().mlModelOutputs(cotModelTensors).build());
+        } else {
+            listener.onResponse(ModelTensorOutput.builder().mlModelOutputs(finalModelTensors).build());
+        }
+    }
 
-            @Override
-            public void onFailure(final Exception e) {
-                listener.onFailure(e);
-            }
-        }, size);
+    private void saveMessage(
+            ConversationIndexMemory memory,
+            String question ,
+            String finalAnswer ,
+            String sessionId ,
+            String parentInteractionId,
+            AtomicInteger traceNumber,
+            boolean isFinalAnswer,
+            boolean traceDisabled,
+            ActionListener listener
+    ) {
+        ConversationIndexMessage msgTemp = ConversationIndexMessage.conversationIndexMessageBuilder().type(memory.getType()).question(question).response(finalAnswer).finalAnswer(isFinalAnswer).sessionId(sessionId).build();
+        if (traceDisabled) {
+            listener.onResponse(true);
+        } else {
+            memory.save(msgTemp, parentInteractionId, traceNumber.addAndGet(1), "LLM", listener);
+        }
     }
 
     @SuppressWarnings("unchecked")
